# wimmelbench

./: LICENSE  README.md  annotations.json  descriptions.json  pyproject.toml  server.py  transform.sh
results/claude-3-5-sonnet-20241022/: grading.json  results.json  results_telescope.json
results/gemini-1.5-pro/: results.json
results/gemini-1.5-pro-002/: grading.json  results.json  results2.json  results_telescope.json
results/gpt-4o-2024-08-06/: grading.json  results.json  results_old.json  results_telescope.json
src/wimmelbench/: __init__.py  count.py  describe.py  draw.py  dstats.py  eval.py  grade.py  hallucination_stats.py  models.py  sort.py  stats.py  test.py  transform.py  verify_telescope.py
src/wimmelbench/stats/: ap.py  histogram.py  stats.py
templates/: index.html
