[project]
name = "wimmelbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.7.2",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.1",
    "pillow>=11.0.0",
    "openai>=1.54.1",
    "google-generativeai>=0.8.3",
    "fastapi[standard]>=0.115.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
